# AdventOfCode

./: .clang-format  .gitignore  CMakeLists.txt  README-2021.md  README.md  add_day.sh
.github/workflows/: readme-stars.yml
2021/: CMakeLists.txt
2021/1/: CMakeLists.txt  part1.cpp  part2.cpp
2021/10/: CMakeLists.txt  part2.cpp
2021/11/: CMakeLists.txt  Octopus.cpp  Octopus.hpp  part1.cpp  part2.cpp
2021/12/: CMakeLists.txt  Node.hpp  input.txt  part1.cpp  part2.cpp
2021/13/: CMakeLists.txt
2021/14/: CMakeLists.txt  part1.cpp  part2.cpp
2021/15/: CMakeLists.txt  part1.cpp
2021/2/: CMakeLists.txt  part1.cpp  part2.cpp
2021/3/: CMakeLists.txt  part1.cpp  part2.cpp
2021/4/: BingoBoard.hpp  CMakeLists.txt  part1.cpp  part2.cpp
2021/5/: CMakeLists.txt  Map.cpp  Map.hpp  part2.cpp
2021/6/: CMakeLists.txt  part1.cpp
2021/7/: CMakeLists.txt  part1.cpp
2021/8/: CMakeLists.txt  part1.cpp  part2.cpp
2021/9/: CMakeLists.txt  part1.cpp
2021/Day-05/: CMakeLists.txt  part1.cpp
2021/Day-06/: CMakeLists.txt  part2.cpp
2021/Day-07/: part2.cpp
2021/Day-09/: part2.cpp
2021/Day-10/: part1.cpp
2021/Day-11/: CMakeLists.txt
2021/Day-13/: CMakeLists.txt  part1.cpp
2021/Day-14/: part2.cpp
2021/Day-15/: part1.cpp
2022/Day-01/: CMakeLists.txt  part1.cpp  part2.cpp
2022/Day-02/: CMakeLists.txt  part1.cpp  part2.cpp
2022/Day-03/: CMakeLists.txt  part1.cpp  part2.cpp
2022/Day-04/: CMakeLists.txt  part1.cpp  part2.cpp
2022/Day-05/: CMakeLists.txt  part1.cpp  part2.cpp
2022/Day-06/: CMakeLists.txt  part1.cpp  part2.cpp
2022/Day-07/: CMakeLists.txt  part1.cpp  part2.cpp
2022/Day-08/: CMakeLists.txt  part1.cpp  part2.cpp
2022/Day-09/: part1.cpp  part2.cpp
2022/Day-10/: part1.cpp  part2.cpp
2022/Day-11/: part1.cpp  part2.cpp
2022/Day-12/: part1.cpp  part2.cpp
2023/day1/: Cargo.toml
2023/day1/src/: main.rs
2023/day2/: Cargo.toml
2023/day2/src/: main.rs
2023/example/: Cargo.toml
2023/example/src/: main.rs
2023/libs/example_lib/: Cargo.toml
2023/libs/example_lib/src/: lib.rs
2023/libs/file_handler/: Cargo.toml
2023/libs/file_handler/src/: lib.rs
2023/libs/matrix/: Cargo.toml
2023/libs/matrix/src/: lib.rs
2024/: CMakeLists.txt
2024/Day-01/: part1.cpp  part2.cpp
2024/Day-02/: CMakeLists.txt  part1.cpp  part2.cpp
2024/Day-03/: CMakeLists.txt  part1.cpp  part2.cpp
2024/Day-04/: part1.cpp  part2.cpp
2024/Day-05/: part1.cpp  part2.cpp
2024/Day-06/: CMakeLists.txt  part1.cpp  part2.cpp
2024/Day-07/: part1.cpp  part2.cpp
2024/Day-08/: part1.cpp  part2.cpp
2024/Day-09/: part1.cpp  part2.cpp
2024/Day-10/: CMakeLists.txt  part1.cpp  part2.cpp
2024/Day-11/: part1.cpp  part2.cpp
2024/Day-12/: part1.cpp  part2.cpp
2024/Day-13/: CMakeLists.txt  part1.cpp  part2.cpp
2025/day-01/: part1.py  part2.py
2025/day-02/: part1.py  part2.py
2025/day-03/: part1.py  part2.py
2025/day-04/: part1.py  part2.py
2025/day-05/: part1.py  part2.py
2025/day-06/: part1.py  part2.py
2025/day-07/: part1.py  part2.py
2025/day-08/: part1.py  part2.py
2025/day-09/: part1.py
ExampleDay/: CMakeLists.txt
Libs/: CMakeLists.txt
Libs/FileHandler/: CMakeLists.txt  FileHandler.cpp  FileHandler.hpp
Libs/Matrix/: CMakeLists.txt  Matrix.hpp  Matrix.tpp
