[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
example_lib = { path = "../libs/example_lib", version = "0.1.0" }
file_handler = { path = "../libs/file_handler", version = "0.1.0" }
matrix = { path = "../libs/matrix", version = "0.1.0" }